Fix: use Java 8 compatible syntax